--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 crash.log
 crash.*.log
 
+# EC2 key pairs
+*.pem
+*.ppk
+*.key
+
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
@@ -39,3 +44,15 @@ terraform.rc
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 *.terraform.*
+
+//Ignoring Secrets
+secret.auto.tfvars
+
+//Ignore IDE files
+.idea/
+
+//Ignore terraform config files
+.terraform/*
+
+// Ignore the .dccache file for Snyk Code Analysis
+.dccache
